# trusty-izzie

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md
.claude-mpm/: configuration.yaml
.claude-mpm/memories/: PM.md  rust-engineer.md
.github/workflows/: bot-release.yml  installer-dev.yml  installer-release.yml  website-deploy.yml
config/: default.toml
crates/trusty-api/: Cargo.toml
crates/trusty-api/src/: lib.rs  main.rs  routes.rs  state.rs
crates/trusty-api/src/handlers/: agents.rs  chat.rs  entities.rs  health.rs  memories.rs  mod.rs  sync.rs  telegram_proxy.rs
crates/trusty-chat/: Cargo.toml
crates/trusty-chat/src/: context.rs  engine.rs  lib.rs  session.rs  skills.rs  tools.rs
crates/trusty-cli/: Cargo.toml  build.rs
crates/trusty-cli/src/: log.rs  main.rs
crates/trusty-core/: Cargo.toml
crates/trusty-core/src/: config.rs  error.rs  github.rs  lib.rs  logging.rs  maps.rs  secrets.rs
crates/trusty-daemon/: Cargo.toml
crates/trusty-daemon/src/: dispatcher.rs  ipc.rs  lib.rs  loop_runner.rs  main.rs  scheduling.rs  slack_push.rs  telegram_push.rs
crates/trusty-daemon/src/handlers/: agent_run.rs  calendar_refresh.rs  contacts_sync.rs  email_sync.rs  entity_extraction.rs  evening_briefing.rs  follow_up.rs  junk_mail_archive.rs  memory_decay.rs  message_interrupt_check.rs  messages_sync.rs  mod.rs  morning_briefing.rs  needs_reauth.rs  relationship_nudge.rs  reminder.rs  style_trainer.rs  train_delay_check.rs  vip_email_check.rs  watch_check.rs  weather_check.rs  weekly_digest.rs  whatsapp_sync.rs
crates/trusty-email/: Cargo.toml
crates/trusty-email/src/: auth.rs  client.rs  lib.rs  sync.rs
crates/trusty-embeddings/: Cargo.toml
crates/trusty-embeddings/src/: bm25.rs  embedder.rs  hybrid.rs  lib.rs
crates/trusty-extractor/: Cargo.toml
crates/trusty-extractor/src/: extractor.rs  lib.rs  prompt.rs  types.rs
crates/trusty-mcp/: Cargo.toml
crates/trusty-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/trusty-mcp/src/transport/: sse.rs  stdio.rs
crates/trusty-memory/: Cargo.toml
crates/trusty-memory/src/: decay.rs  lib.rs  recall.rs  store.rs
crates/trusty-metro-north/: Cargo.toml
crates/trusty-metro-north/src/: client.rs  lib.rs  parser.rs  skill.rs  stations.rs
crates/trusty-migrate/: Cargo.toml
crates/trusty-migrate/src/: main.rs
crates/trusty-models/: Cargo.toml
crates/trusty-models/src/: agent.rs  chat.rs  config.rs  email.rs  entity.rs  event.rs  lib.rs  memory.rs
crates/trusty-skill/: Cargo.toml
crates/trusty-skill/src/: lib.rs  script.rs  skill.rs
crates/trusty-slack/: Cargo.toml
crates/trusty-slack/src/: api.rs  events.rs  handler.rs  lib.rs  main.rs  proxy.rs  socket_mode.rs  verify.rs
crates/trusty-store/: Cargo.toml
crates/trusty-store/src/: graph.rs  lance.rs  lib.rs  sqlite.rs
crates/trusty-telegram/: Cargo.toml
crates/trusty-telegram/src/: channel.rs  email_sync.rs  er_persist.rs  gdrive.rs  main.rs
crates/trusty-tui/: Cargo.toml
crates/trusty-tui/src/: main.rs
crates/trusty-weather/: Cargo.toml
crates/trusty-weather/src/: alerts.rs  forecast.rs  geocode.rs  lib.rs  skill.rs
docs/: signing-setup.md  testing-persona.md
docs/agents/: evening-briefing.md  morning-briefing.md  researcher.md  script-writer.md  summarizer.md  weekly-digest.md
docs/skills/: README.md  metro-north.md  weather.md
docs/specs/: 00-overview.md  01-workspace-architecture.md  02-entity-discovery.md  03-memory-system.md  04-chat-engine.md  05-storage-layer.md  06-email-pipeline.md  07-api-design.md  08-deployment.md  08-skill-architecture.md  09-agent-model.md  10-mcp-service.md
installer/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
installer/public/: skills-manifest.json
installer/src/: App.svelte  app.css
installer/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.dev.json  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: installer.rs  lib.rs  main.rs
installer/src-tauri/src/commands/: app.rs  config.rs  daemon.rs  mod.rs  oauth.rs
installer/src/app/: AppShell.svelte  ChatView.svelte  HealthView.svelte  SettingsView.svelte  SkillsView.svelte
installer/src/steps/: ApiKey.svelte  Done.svelte  GoogleOAuth.svelte  Installing.svelte  LlmBackend.svelte  SkillsSelect.svelte  SlackSetup.svelte  Welcome.svelte
launchd/: com.trusty-izzie.api.plist  com.trusty-izzie.daemon.plist  com.trusty-izzie.telegram.plist
migration/: migrate_from_weaviate.py
scripts/: api-start.sh  api-stop.sh  auth.sh  build.sh  chat-smoke-test.sh  chat.sh  daemon-start.sh  daemon-stop.sh  e2e-test.sh  install.sh  mcp-start.sh  migrate-lance-schema.sh  release.sh  slack-start.sh  status.sh  sync.sh  telegram-pair.sh  telegram-start.sh  telegram-stop.sh  test-features.sh  uninstall.sh  version-bump.sh
skills/: browser-automation.json  firecrawl.json  google-search.json  serpapi.json  skyvern.json  tavily.json  web-scrape.json  web-search.json
slack/: manifest.json
tests/e2e/: README.md
website/: .gitignore  package-lock.json  package.json
website/.vercel/: project.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/about/: page.tsx
website/src/app/downloads/: page.tsx
website/src/app/plugins/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/terms/: page.tsx
