[workspace]
resolver = "2"
members = [
    "crates/trusty-models",
    "crates/trusty-embeddings",
    "crates/trusty-store",
    "crates/trusty-extractor",
    "crates/trusty-email",
    "crates/trusty-memory",
    "crates/trusty-chat",
    "crates/trusty-core",
    "crates/trusty-daemon",
    "crates/trusty-api",
    "crates/trusty-cli",
    "crates/trusty-tui",
    "crates/trusty-telegram",
    "crates/trusty-migrate",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["Masa <bobmatnyc@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-izzie"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Storage — LanceDB
lancedb = "0.13"
arrow = { version = "52", features = ["prettyprint"] }
arrow-array = "52"
arrow-schema = "52"

# Graph DB
kuzu = "0.9"

# Embeddings (local ONNX)
fastembed = "4"

# Full-text search (BM25)
tantivy = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# OAuth
oauth2 = "4"

# Utilities
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
regex = "1"
strsim = "0.11"

# IPC
interprocess = "2"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
