[package]
name = "trusty-chat"
description = "Conversation engine: RAG context assembly, tool dispatch, session management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
trusty-models = { path = "../trusty-models" }
trusty-core = { path = "../trusty-core" }
trusty-store = { path = "../trusty-store" }
trusty-memory = { path = "../trusty-memory" }
trusty-embeddings = { path = "../trusty-embeddings" }
trusty-extractor = { path = "../trusty-extractor" }
trusty-email = { path = "../trusty-email" }
trusty-metro-north = { path = "../trusty-metro-north" }
trusty-weather = { path = "../trusty-weather" }
trusty-skill = { path = "../trusty-skill" }

reqwest = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
urlencoding = "2"
shellexpand = { workspace = true }
