[package]
name = "trusty-core"
description = "Shared traits, config loading, error types, and logging setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
trusty-models = { path = "../trusty-models" }

config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2"
