[package]
name = "trusty-daemon"
description = "Background sync daemon: email polling loop and IPC server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "trusty-daemon"
path = "src/main.rs"

[lib]
name = "trusty_daemon"
path = "src/lib.rs"

[dependencies]
trusty-models = { path = "../trusty-models" }
trusty-core = { path = "../trusty-core" }
trusty-metro-north = { path = "../trusty-metro-north" }
trusty-email = { path = "../trusty-email" }
trusty-extractor = { path = "../trusty-extractor" }
trusty-embeddings = { path = "../trusty-embeddings" }
trusty-memory = { path = "../trusty-memory" }
trusty-store = { path = "../trusty-store" }

interprocess = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
