[package]
name = "trusty-memory"
description = "Memory recall, storage, and retrieval — wraps store + embeddings for the chat layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
trusty-models = { path = "../trusty-models" }
trusty-store = { path = "../trusty-store" }
trusty-embeddings = { path = "../trusty-embeddings" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
