[package]
name = "trusty-skill"
description = "Skill trait and ScriptSkill adapter for trusty-izzie"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
