[package]
name = "trusty-tui"
description = "Terminal UI for trusty-izzie — chat panel with entity sidebar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "trusty-tui"
path = "src/main.rs"

[dependencies]
trusty-models = { path = "../trusty-models" }
trusty-core = { path = "../trusty-core" }
trusty-chat = { path = "../trusty-chat" }
trusty-store = { path = "../trusty-store" }

ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
