[package]
name = "trusty-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
urlencoding = "2"
